allow dynamic board event overwrites